--- a/src/app/components/main/documents/document.scss
+++ b/src/app/components/main/documents/document.scss
@@ -18,10 +18,14 @@ $pale-grey: #e7ecf1;
 	border: solid 1px #e7ecf1;
 	border-radius: 5px;
 	background-color: #FFFFFF;
+  color: #4f6379;
   .download {
     text-decoration: none;
     color: inherit;
     display: flex;
+    flex: 1;
+    align-items: center;
+    justify-content: center;
     img {
       height: 20px;
       margin-left: 10px;
@@ -41,14 +45,33 @@ $pale-grey: #e7ecf1;
 	vertical-align: middle;
 	line-height: 25px;
 	background-color: #f5f9fa;
-	padding: 30px;
 	font-size: 14px;
 	font-weight: 500;
 	font-style: normal;
 	opacity: 0.75;
 	font-family: Lato;
   display: flex;
-  align-items: center;
+  align-items: stretch;
+  .upload {
+    display: flex;
+    align-items: center;
+    padding-left: 20px;
+    flex: 1;
+  }
+  .view {
+    border-right: 2px solid #e7ecf1;
+  }
+  .view,.replace {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    outline: none;
+    cursor: pointer;
+    flex: 1;
+    &:hover {
+      opacity: 0.8;
+    }
+  }
 }
 
 .document-upper {
