--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -265,26 +265,26 @@
 
         <footer>
             <div layout="row" class="footerBtns" layout-align="start center" ng-if="!isBroker">
-                <md-button class="md-raised md-back" ng-click="vm.backStep()" ng-show="vm.activeStep>1">Back</md-button>
-                <md-button ng-if="!isBroker" class="md-raised md-success" ng-click="vm.nextStep()" ng-disabled="(vm.activeStep==5 && !vm.timeslotSelected) || (vm.activeStep==1 && selectedPartners.length==0)">
-                    <span ng-show="vm.activeStep<5">Next</span>
-                    <span ng-show="vm.activeStep==5">Submit</span>
+                <md-button class="md-raised md-back" ng-click="vm.backStep()" ng-show="vm.getActiveStep()>1">Back</md-button>
+                <md-button ng-if="!isBroker" class="md-raised md-success" ng-click="vm.nextStep()" ng-disabled="(vm.getActiveStep()==5 && !vm.timeslotSelected) || (vm.getActiveStep()==1 && selectedPartners.length==0)">
+                    <span ng-show="vm.getActiveStep()<5">Next</span>
+                    <span ng-show="vm.getActiveStep()==5">Submit</span>
                 </md-button>
-                <md-button ng-if="isBroker" class="md-raised md-success" ng-click="vm.nextStep()" ng-disabled="(vm.activeStep==5 && !vm.timeslotSelected) || (vm.activeStep==1)">
-                    <span ng-show="vm.activeStep<5">Next</span>
-                    <span ng-show="vm.activeStep==5">Submit</span>
+                <md-button ng-if="isBroker" class="md-raised md-success" ng-click="vm.nextStep()" ng-disabled="(vm.getActiveStep()==5 && !vm.timeslotSelected) || (vm.getActiveStep()==1)">
+                    <span ng-show="vm.getActiveStep()<5">Next</span>
+                    <span ng-show="vm.getActiveStep()==5">Submit</span>
                 </md-button>
                 <!-- <md-button class="md-raised md-edit-form" ng-click="vm.editForm()">Edit Form</md-button> -->
             </div>
             <div layout="row" class="footerBtns" layout-align="start center" ng-if="isBroker">
                 <md-button class="md-raised md-success" ng-click="vm.nextRequestStep()">
-                    <span ng-show="vm.activeStep==1">Start</span>
-                    <span ng-show="vm.activeStep>1">Accept</span>
+                    <span ng-show="vm.getActiveStep()==1">Start</span>
+                    <span ng-show="vm.getActiveStep()>1">Accept</span>
                 </md-button>
-                <md-button class="md-raised md-success" ng-click="vm.submitApplication('APPROVED')" ng-show="vm.activeStep==1" ng-disabled="!vm.allVerified">
+                <md-button class="md-raised md-success" ng-click="vm.submitApplication('APPROVED')" ng-show="vm.getActiveStep()==1" ng-disabled="!vm.allVerified">
                     <div>Approve</div>
                 </md-button>
-                <md-button class="md-raised md-warn" ng-click="vm.submitApplication('REJECT')" ng-show="vm.activeStep==1" ng-disabled="!vm.allVerified">
+                <md-button class="md-raised md-warn" ng-click="vm.submitApplication('REJECT')" ng-show="vm.getActiveStep()==1" ng-disabled="!vm.allVerified">
                     <div>Reject</div>
                 </md-button>
             </div>
