--- a/src/app/components/main/calendar/dialog.html
+++ b/src/app/components/main/calendar/dialog.html
@@ -1,7 +1,8 @@
 <md-dialog aria-label="List dialog">
   <md-dialog-content style="width:400px;height:200px;">
+    <div style="position: fixed; right: 10px; top: 10px;" ng-click="closeDialog()"><img src="/assets/images/close-message.png" /></div>
     <div class="dialog-content-broker" style="margin-top:20px;" flex layout="column">
-    <div flex layout="row" style="min-height: 40px;margin-top: 30px;">
+    <div flex layout="row" style="min-height: 40px;margin-top: 30px;" ng-if="isBroker">
       <div class="avatar-circle" ng-if="!appointment.avatar" flex="20" style="max-height: 40px; max-width: 40px;">
         {{slot.userFirstName|limitTo:1|capitalize}}
         {{slot.userLastName|limitTo:1|capitalize}}
@@ -11,8 +12,14 @@
       	<div style="color: rgba(0,0,0,0.5)">{{slot.startTime | date: 'HH:MM a'}}</div>
       </div>
     </div>
+    <div style="min-height: 40px;margin-top: 30px; width:100%" ng-if="!isBroker">
+      <div style="color: rgba(0,0,0,0.9); margin-top:10px;">{{slot.meetingContent}}<br></div>
+      <div style="color: rgba(0,0,0,0.5); margin-top:10px;">{{slot.startTime | date: 'HH:MM a'}}</div>
+      <div style="color: rgba(0,0,0,0.5); margin-top:10px;">{{slot.meetingLocation}}</div>
+    </div>
 	<br>
-	<div layout="row" flex align-content="flex-end">
+
+	<div layout="row" flex align-content="flex-end" ng-if="isBroker && slot.status == 'PENDING'">
 	  <md-button class="md-raised md-success" ng-click="closeDialog()">Confirm</md-button>
 	  <md-button class="md-raised md-back" ng-click="closeDialog()">Reschedule</md-button>
 	</div>
