Center align account statistics chart according to the design. A tool tip to display the status information when hovered either on KYC, documents or Personal details.

--- a/src/assets/styles/sass/index.scss
+++ b/src/assets/styles/sass/index.scss
@@ -71,13 +71,21 @@ table {
     line-height: 40px;
     text-decoration: none;
 }
-
+.legend {
+  align-self: stretch;
+}
 .legend.vertical
 {
   color: white;
   flex-flow:column;
   padding-left: 54px;
 }
+.progress-chart-wrapper {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+}
+
 .progress-chart {
   width: 234px;
   margin-top: 20px;
