--- a/src/app/components/main/progress/progress.html
+++ b/src/app/components/main/progress/progress.html
@@ -1,4 +1,4 @@
-<div>
+<div ng-class="{'progress-chart-wrapper': true, vertical: vm.isVertical}">
 	<style>
 		.rbc-label.rbc-label-start	{
 		    fill: white;
@@ -10,15 +10,15 @@
 	
 	</div>
 	<div class="legend" ng-class="{legend: true, vertical: vm.isVertical}" style="display: flex; justify-content: space-between;margin-top: 10px;">
-		<div style="display: flex; align-items: center;">
+		<div ng-attr-title="{{vm.documentStatus}}" class="item" style="display: flex; align-items: center;">
 			<div class="item" style="margin-right: 10px; width: 10px; height: 10px; border-radius:100%; background-color: #00cacd"></div>
 			Documents
 		</div>
-		<div class="item" style="display: flex; align-items: center;" >
+		<div ng-attr-title="{{vm.profileStatus}}" class="item" style="display: flex; align-items: center;" >
 			<div style="margin-right: 10px; width: 10px; height: 10px; border-radius:100%; background-color: #4bb7f5"></div>
 			Personal Profile
 		</div>
-		<div class="item" style="display: flex; align-items: center;">
+		<div ng-attr-title="{{vm.kycStatus}}" class="item" style="display: flex; align-items: center;">
 			<div style="margin-right: 10px; width: 10px; height: 10px; border-radius:100%; background-color: #f7b92f
 "></div>
 			KYC
