Remove ':' for title Brokerage applications and 1 or 2 line spacing above KYC label - right most section

--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -41,7 +41,7 @@
             <div><progress-display chart-id="brokerage-progress" is-vertical="true"/></div>
              <div class="contact-brokerage">
                 <div style="position: relative;display: flex; flex-flow: column;">
-                    <h2 style="color:white;">Brokerage Applications: </h2>
+                    <h2 style="color:white;">Brokerage Applications</h2>
                     <input type="text" placeholder="Search"> 
                     <img src="/assets/images/search.png" alt="Search" style="position: absolute;right:2px;top:40px;">   
                     <div style="display: flex;flex-flow: column;">
