--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -44,13 +44,16 @@
                     <h2 style="color:white;">Brokerage Applications</h2>
                     <input type="text" placeholder="Search"> 
                     <img src="/assets/images/search.png" alt="Search" style="position: absolute;right:2px;top:40px;">   
-                    <div style="display: flex;flex-flow: column;">
-                        <div style="display: flex;background: white;border: none;border-radius: 3px;padding: 20px;margin-bottom: 10px;" ng-repeat="item in vm.contactedBrokers|limitTo:3">
-                            <img style="width: 60px; height:36px;margin-right: 15px;" ng-src="/assets/images/partnerLogos/{{item.brokerageId}}.png" alt="">
+                    <div style="display: flex;flex-flow: column;color:white;">
+                        <div style="display: flex;border: none;border-radius: 3px;padding: 20px;padding-left:0px;margin-bottom: 10px;" ng-repeat="item in vm.contactedBrokers|limitTo:3">
+                            <img style="width: 70px; background:white; border-radius:3px;height:36px;margin-right: 15px; padding: 5px;" ng-src="/assets/images/partnerLogos/{{item.brokerageId}}.png" alt="">
                             <div style="display: flex; flex-flow: column;">
-                                <div style="font-size: 14px;opacity: 0.4">{{item.brokerageId}}
+                                <div style="font-size: 14px;">{{item.brokerageId}}
                                 </div>
-                                <div class="pending-btn" style="margin-top: 10px;">
+                                <div  ng-if="item.status!='PENDING'" style="margin-top: 10px;font-size: 14px;line-height: 26px;background-color:#2ecc71;width: 90px;text-align: center;border-radius: 4px;">
+                                    {{item.status}}        
+                                </div>
+                                <div  ng-if="item.status=='PENDING'" class="confirm-btn" style="margin-top: 10px;font-size: 14px;line-height: 26px;background-color: #3498db;width: 90px;text-align: center;border-radius: 4px;">
                                     {{item.status}}        
                                 </div>
                             </div> 
