Preview of messages is not as per the design

--- a/src/app/components/main/messages/messages.scss
+++ b/src/app/components/main/messages/messages.scss
@@ -88,6 +88,7 @@
 		background: #f2f6f8;
 		padding: 30px;
 		position: relative;
+		height: calc(100vh - 120px);
 		&.send {
 			justify-content: space-between;
 		}
