--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -183,14 +183,14 @@
 
         <div ng-if="!isBroker">
             <md-step md-label="Personal Details">
-                <md-step-body style="min-height:700px;">
+                <md-step-body>
                     <profile-form ng-class="{error:personalDetailsError}" is-broker="isBroker" user-email-id="vm.userAppointment.email"/>
                 </md-step-body>
             </md-step>
         </div>
         <div ng-if="!isBroker">
             <md-step md-label="KYC">
-                <md-step-body style="min-height:700px;">
+                <md-step-body>
                     <kyc-form ng-class="{error:vm.kycerror}"/>
                 </md-step-body>
             </md-step>
