--- a/src/app/components/main/dashboard/dashboard.scss
+++ b/src/app/components/main/dashboard/dashboard.scss
@@ -3,8 +3,8 @@
     font-size: 16px;
     display: flex;
     flex-grow: 1;
-    min-height: 100%;
-    height: 100%;
+    max-height: calc(100vh - 120px);
+    overflow: auto;    
     h2 {
         font-weight: 500;
         margin-bottom: 8px;
@@ -122,6 +122,7 @@
         flex-shrink: 0;
         margin-top: 20px;
         margin-bottom: 20px;
+        min-height: 635px;
         .statistics{
             display: flex;
             margin: 40px;
@@ -138,7 +139,7 @@
             flex-flow: column;
             .brokerage-container {
                 overflow: auto;
-                max-height:400px;
+                max-height:200px;
                 padding-right: 20px;
             }
             .brokerage-item {
@@ -170,8 +171,8 @@
     font-size: 16px;
     display: flex;
     flex-grow: 1;
-    min-height: 100%;
-    height: 100%;
+    max-height: calc(100vh - 120px);
+    overflow: auto;    
     .left {
         display: flex;
         flex-flow: column;
