--- a/src/app/components/main/documents/document.scss
+++ b/src/app/components/main/documents/document.scss
@@ -122,4 +122,8 @@ $pale-grey: #e7ecf1;
 .flex-wrapper {
   max-height: calc(100vh - 120px);
   overflow: auto;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  padding-bottom: 80px;
 }
