--- a/src/app/components/main/toolbar/toolbar.html
+++ b/src/app/components/main/toolbar/toolbar.html
@@ -1,6 +1,6 @@
 <div class="toolbar">
 	<div class="display-area">
-		<img ng-click="sideNavCollapsed=!sideNavCollapsed" src="/assets/images/hide-bar.png" style="padding: 0 13px;cursor: pointer;outline: none;">	
+		<img ng-click="sideNavCollapsed=!sideNavCollapsed" ng-class="{collapsed:sideNavCollapsed}" src="/assets/images/hide-bar.png" style="padding: 0 13px;cursor: pointer;outline: none;">	
 		<div class="grow">{{breadCrumb}}</div>
 		 <md-input-container md-no-float class="md-block">
           <input style="position: relative;top:20px; left:30px;font-size: 12px;" ng-model="vm.search" placeholder="Search here">
