Messages to be limited to latest 3 items and a compose message option to be always available.

--- a/src/app/components/main/dashboard/dashboard.scss
+++ b/src/app/components/main/dashboard/dashboard.scss
@@ -242,6 +242,7 @@
                 border-top-left-radius: 0;
                 border-bottom-left-radius: 0;
                 border-left: 5px solid #3498db;
+                cursor: pointer;
                 .time {
                     display: flex;
                     align-items: flex-start;
