--- a/src/app/components/main/dashboard/dashboard.html
+++ b/src/app/components/main/dashboard/dashboard.html
@@ -116,7 +116,7 @@
 					No Messages to Show 
 				</div>
 
-				<div class="message" ng-repeat="message in vm.messages | orderBy:'-messageDate'" ng-click="vm.openMessage(message)">
+				<div class="message" ng-repeat="message in vm.messages | orderBy:'-messageDate'|limitTo:3" ng-click="vm.openMessage(message)">
 					<img ng-if="message.avatar" style="width:120px;padding-right: 20px;align-self: flex-start;" ng-src="{{message.avatar}}">
 					<div class="avatar-circle" ng-if="!message.avatar">{{message.messageFrom|limitTo:1|capitalize}}</div>
 					<div class="detail">
