Date of birth to display just the date information and no time information

--- a/src/app/components/main/kyc-form/kycform.html
+++ b/src/app/components/main/kyc-form/kycform.html
@@ -20,7 +20,7 @@
 					{{field.questionDesc}}
 					<span ng-if="field.requireField==='REQUIRED'">*</span>
 				</label>
-				<input disabled name="kyc-{{field.questionId}}" type="text" ng-model="field.answerText">
+				<input disabled name="kyc-{{field.questionId}}" type="text" ng-model="field.displayAnswerText">
 			</div>
 		</div>
 	</div>	
