--- a/src/app/components/main/profile-form/profileform.html
+++ b/src/app/components/main/profile-form/profileform.html
@@ -29,7 +29,7 @@
 					{{field.questionDesc}}
 					<span ng-if="field.requireField==='REQUIRED'">*</span>
 				</label>
-				<input disabled name="kyc-{{field.questionId}}" type="text" ng-model="field.answerText">
+				<input disabled name="kyc-{{field.questionId}}" type="text" ng-model="field.displayAnswerText">
 			</div>
 		</div>
 	</div>	
