--- a/src/app/components/main/toolbar/toolbar.html
+++ b/src/app/components/main/toolbar/toolbar.html
@@ -3,9 +3,9 @@
 		<img ng-click="sideNavCollapsed=!sideNavCollapsed" ng-class="{collapsed:sideNavCollapsed}" src="/assets/images/hide-bar.png" style="padding: 0 13px;cursor: pointer;outline: none;">	
 		<div class="grow">{{breadCrumb}}</div>
 		 <md-input-container md-no-float class="md-block">
-          <input style="position: relative;top:20px; left:30px;font-size: 12px;" ng-model="vm.search" placeholder="Search here">
+          <input ng-if="vm.showSearch" style="position: relative;top:20px; left:30px;font-size: 12px;" ng-model="vm.search" placeholder="Search here">
         </md-input-container>
-		<img src="/assets/images/search.png" style="padding: 0 13px;cursor: pointer;z-index: 1">
+		<img ng-click="vm.showSearch = !vm.showSearch" src="/assets/images/search.png" style="padding: 0 13px;cursor: pointer;z-index: 1;cursor: pointer;outline: none;">
 		<div class="flag-dropdown">
 			<img ng-src="{{vm.activeFlag.url}}" style="padding: 0 13px; height: 32px;">
 			<div style="font-size: 14px;">{{vm.activeFlag.country}}</div>		
@@ -25,7 +25,7 @@
 
 	</div>
 	<div class="avatar-area">
-		<div style="padding: 15px; cursor: pointer; padding-right: 5px;" ui-sref="main.settings.profile">{{vm.displayName}}</div>
+		<div style="padding: 15px; cursor: pointer; padding-right: 5px;font-size: 14px;" ui-sref="main.settings.profile">{{vm.displayName}}</div>
 		<a class="avatar-circle" ui-sref="main.settings.profile" ng-if="!message.avatar">{{vm.avatarName}}</a>		
 		<a ng-click="vm.signOut()" style="cursor: pointer;" title="Logout">
 			<img style="height: 35px;" src="/assets/images/logout.svg" alt="Logout">
