--- a/src/app/components/main/brokerage/brokerage.scss
+++ b/src/app/components/main/brokerage/brokerage.scss
@@ -469,6 +469,7 @@ md-event-calendar .md-event-calendar-cell-event.book-appointment {
 	    outline:none;
 	    position: relative;
 	    cursor: pointer;
+	    border-radius: 3px;
 	    &.selected {
 	    	background-color: #f2f2f2;
 	    	img.selected {
