Fix for Document Preview functionality doesn' t work for all documents/accounts (works for broker1@broker.com/but doesn't not for contact@bitbank.com)

--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -298,19 +298,10 @@
 
     </div>
     <div layout="column" class="rightSide" ng-if="isBroker" flex>
-    <!--  style="background: url(../../../../assets/images/broker-dashboard-background.png) no-repeat; background-color: #47ada4; overflow: scroll;"> -->
         <img style="position: absolute;width:250px;height:100%; z-index: 1;" ng-src="{{vm.bgurl}}">
         <mini-calendar style="z-index: 3;"/>
-        <!-- <mini ng-class="{error:vm.kycerror}" is-broker="isBroker" user-email-id="vm.userAppointment.email"/> -->
-        <!-- <md-event-calendar style="z-index: 3;">
-            <md-event-calendar-header class="md-center">
-                <md-event-calendar-prev></md-event-calendar-prev>
-                <md-event-calendar-title></md-event-calendar-title>
-                <md-event-calendar-next></md-event-calendar-next>
-            </md-event-calendar-header>
-        </md-event-calendar> -->
         <h2 style="color: white;margin: 20px; margin-bottom: 0px; z-index: 3;" ng-if="vm.usermessages">Messages</h2>
-        <span ng-repeat="msg in vm.usermessages" style="z-index: 3;">
+        <span ng-repeat="msg in vm.usermessages|orderBy:'-date'|limitTo:3" style="z-index: 3;">
             <div class="msg-requests {{msg.class}}">
                 <div>{{msg.msg}}</div>
                 <div class="datetime">{{msg.date | date:'dd MMM yy, HH:mm a'}}</div>
