--- a/src/app/components/main/brokerage/brokerage.scss
+++ b/src/app/components/main/brokerage/brokerage.scss
@@ -338,13 +338,15 @@ md-event-calendar .md-event-calendar-cell-event.book-appointment {
         margin-left: 10px;
     }
     .pending-btn {
-        padding: 5px 18px;
+        padding: 5px 0;
         text-transform: uppercase;
         border: 1px solid #57c3ea;
         color: #57c3ea;
         border-radius: 3px;
         font-size: 12px;
         cursor: pointer;
+        text-align: center;
+        min-height: 25px;
     }
 }
 .appointment.active {
