--- a/src/app/components/access/signup/signup.scss
+++ b/src/app/components/access/signup/signup.scss
@@ -19,6 +19,13 @@
 		    background: white;
 	    }
     }
+    .error {
+    	font-size: 12px;
+    	line-height: 18px;
+    	width: 400px;
+    	margin-top: 10px;
+    }
+
     .button {
 	   	width: 400px;
 	    background: #3aafa5;
