--- a/src/app/components/main/messages/messages.html
+++ b/src/app/components/main/messages/messages.html
@@ -48,6 +48,7 @@
 		<div style="background-color:#f2f6f8;font-size: 22px;padding: 24px 20px;position: relative;font-weight: 300;"> Compose 
 		<img class="close" src="/assets/images/close-message.png" alt="close" ng-click="vm.closeCompose()">
 		</div>
+		<div ng-if="vm.composeMessage.messageFrom" style="position: absolute;"">To</div>
 		<select type="text" name="to" ng-model="vm.composeMessage.messageFrom" placeholder="To" ng-options="mail for mail in vm.toList"/>
 		<input type="text" name="subject" ng-model="vm.composeMessage.messageSubject" placeholder="Subject">
 		<textarea name="message" placeholder="Type your message here..." ng-model="vm.composeMessage.messageContent" cols="30" rows="20"></textarea>
