--- a/src/app/components/access/forgot-password/forgot-password.html
+++ b/src/app/components/access/forgot-password/forgot-password.html
@@ -1,1 +1,16 @@
-<div>Forgot Password</div>
+<form  name="forgetPasswordForm"  class="forgot-password-container" ng-submit="vm.resetPassword()">
+	<div style="font-size: 18px; width: 434px; line-height: 32px; text-align: center; margin-top: 10px;">
+		One time verification link sent to your email id.
+	</div>
+	<input type="email" ng-model="username" placeholder="Email Address" required>
+	<div ng-if="forgetPasswordForm.username.$touched">
+		<div ng-messages="forgetPasswordForm.username.$error">
+			<p class="error" ng-message="required">This field cannot be empty.</p>
+			<p class="error" ng-message="email">Should be a valid email address.</p>
+		</div>		
+	</div>
+	<input type="submit" class="button" value="Reset Password">
+	<div style="margin-top: 30px; margin-bottom: 45px;">
+		Already have an account? <a style="color: #7b868a;cursor: pointer;" ui-sref="access.signin">Click here</a>		
+	</div>
+</form>
