--- a/src/app/components/access/forgot-password/forgot-password.scss
+++ b/src/app/components/access/forgot-password/forgot-password.scss
@@ -1,8 +1,9 @@
-.signup-container {
+.forgot-password-container {
 	display: flex;
     flex-flow: column;
     align-items: center;
     justify-content: space-between;
+    padding: 20px;
     input {
     	border: 1px solid #e7ecf1;
 	    border-radius: 3px;
