--- a/src/app/components/access/signin/signin.scss
+++ b/src/app/components/access/signin/signin.scss
@@ -18,6 +18,20 @@
     	width: 400px;
     	margin-top: 10px;
     }
+    .password {
+    	position: relative;
+    	.forgot-password {
+    		position: absolute;
+		    top: 47px;
+		    right: 20px;
+		    text-decoration: none;
+		    font-size: 14px;
+		    color: #4f6379;
+		    opacity: 0.7;
+		    cursor: pointer;
+    	}
+    }
+
     .button {
 	   	    width: 400px;
 		    cursor: pointer;
