--- a/src/app/components/main/brokerage/brokerage.scss
+++ b/src/app/components/main/brokerage/brokerage.scss
@@ -145,6 +145,29 @@ md-step-body {
 	line-height: 40px;
 
 }
+.rightSide {
+	.message-container {
+		padding: 10px;	
+		.message-requests {
+			border-radius: 5px;
+		    background-color: #fff;
+		    color: #4f6379;
+    		padding: 5px;
+			width: 140px;
+			margin-bottom: 10px;
+		    .datetime {
+		    	color: #778ba2;
+		    	font-size: 12px;
+    			margin-top: 10px;
+		    }
+		    &.left {
+		    }
+		    &.right {
+		    	margin-left: 40px;
+		    } 
+		}
+	}
+}
 .rightSide md-event-calendar {
 	margin: 0px;
 }
@@ -556,28 +579,7 @@ md-event-calendar .md-event-calendar-cell-event.book-appointment {
  	    background-size: 34px;
     }
 }
-.msg-requests {
-	border-radius: 5px;
-    background-color: #ffffff;
-    margin: 20px;
-    padding: 12px;
-    color: #4f6379;
-    font-size: 12px;
-    font-weight: 600;
-    line-height: 14px;
-    float: left;
-    width: 140px;
-    margin-bottom: 0px;
-    position: relative;
-    .datetime {
-    	color: #778ba2;
-    }
-}
-.msg-requests.left {
-}
-.msg-requests.right {
-	margin-left: 140px;
-}
+
 
 /* DIALOG INVITE USER */
 .inviteUsersDialog {
