--- a/src/app/components/main/messages/inbox.html
+++ b/src/app/components/main/messages/inbox.html
@@ -1,12 +1,12 @@
 <div class="inbox">
 	<div style="font-size: 12px;padding-top: 20px;" ng-if="!vm.messages || !vm.messages.length">Inbox is empty</div>
-	<div ng-class="{message: true, active:messageView.activeInboxMessage.messageId == message.messageId}" ng-repeat="message in vm.messages | orderBy:'-messageDate'" ng-click="vm.openMessage(message)">
+	<div ng-class="{message: true, active:messageView.activeInboxMessage.messageId == message.messageId}" ng-repeat="message in vm.messages | orderBy:'-messageDate'| limitTo:vm.messageLimit:(vm.currentPage-1)*vm.messageLimit" ng-click="vm.openMessage(message)">
 		<img ng-if="message.avatar" style="width:120px;padding-right: 20px;align-self: flex-start;" ng-src="{{message.avatar}}">
 		<div class="avatar-circle" ng-if="!message.avatar">{{message.messageFrom|limitTo:1|capitalize}}</div>
 		<div class="detail">
 			<div>{{message.messageSubject}}</div>
-			<div style="font-size: 12px; margin-bottom: 10px;margin-top: 10px;">From: {{message.messageFromName}} ({{message.messageFrom}})</div>
-			<div style="opacity: 0.4;font-size: 14px; line-height: 25px;">{{message.messageContent}}</div>
+			<div style="font-size: 12px; margin-bottom: 8px;margin-top: 8px;">From: {{message.messageFromName}} ({{message.messageFrom}})</div>
+			<div style="opacity: 0.4;font-size: 14px;">{{message.messageContent}}</div>
 		</div>
 		<div class="time">
 			<div style="white-space: nowrap;padding-right: 10px" am-time-ago="message.messageDate | amParse:'DD/MM/YYYY hh:mm'"></div>
@@ -15,4 +15,9 @@
 			</a>
 		</div>
 	</div>
+</div>
+<div class="pagination" ng-if="vm.pages">
+	<a class="previous" ng-click="vm.previous()">Previous</a>
+	<div class="pages">{{vm.currentPage}} of {{vm.pages}} pages</div>
+	<a class="next" ng-click="vm.next()">Next</a>
 </div>
