--- a/src/app/components/main/messages/messages.scss
+++ b/src/app/components/main/messages/messages.scss
@@ -5,6 +5,7 @@
 		display: flex;
 		flex-flow: column;
 		padding: 40px;
+		padding-top: 10px;
 		flex-grow: 1;
 		.navigation {
 			display: flex;
@@ -50,13 +51,14 @@
 		}
 		.inbox,.sent {
 			max-height: 560px;
+			min-height: 525px;
 			max-width: 700px;
 			padding-right: 20px;
 			overflow: auto;
 			.message {
 				display: flex;
 				outline:none;
-				padding: 30px;
+				padding: 15px;
 				padding-right: 20px;
 				margin-top: 20px;
 				border: 1px solid #e7ecf1;
@@ -80,6 +82,26 @@
 				}
 			}
 		} 
+		.pagination {
+			display: flex;
+			justify-content: flex-end;
+			max-width: 700px;
+			margin-top: 10px;
+			.pages{
+				padding: 10px;
+				margin-right: 10px;
+				border:1px solid #e7ecf1;
+			}
+			.previous, .next {
+				padding: 10px;
+				margin-right: 10px;
+				cursor: pointer;
+				background-color: #3aafa5;
+				color: white;
+				text-decoration: none;
+				outline: none;
+			}
+		}
 	}
 	.right {
 		display: flex;
