--- a/src/app/components/main/messages/sent.html
+++ b/src/app/components/main/messages/sent.html
@@ -1,13 +1,13 @@
 <div class="inbox">
 	<div style="font-size: 12px;padding-top: 20px;" ng-if="!vm.messages || !vm.messages.length">Sent is empty</div>
-	<div ng-class="{message: true, active:messageView.activeSentMessage.messageId == message.messageId}" ng-repeat="message in vm.messages|orderBy:'-messageDate'" 
+	<div ng-class="{message: true, active:messageView.activeSentMessage.messageId == message.messageId}" ng-repeat="message in vm.messages|orderBy:'-messageDate'| limitTo:vm.messageLimit:(vm.currentPage-1)*vm.messageLimit" 
 	ng-click="vm.openMessage(message)">
 		<img ng-if="message.avatar" style="width:120px;padding-right: 20px;align-self: flex-start;" ng-src="{{message.avatar}}">
 		<div class="avatar-circle" ng-if="!message.avatar">{{message.messageToName|limitTo:1|capitalize}}</div>
 		<div class="detail">
 			<div>{{message.messageSubject}}</div>
-			<div style="font-size: 12px; margin-bottom: 10px;margin-top: 10px;">To: {{message.messageToName}} ({{message.messageToEmail}})</div>
-			<div style="opacity: 0.4;font-size: 14px; line-height: 25px;">{{message.messageContent}}</div>
+			<div style="font-size: 12px; margin-bottom: 8px;margin-top: 8px;">To: {{message.messageToName}} ({{message.messageToEmail}})</div>
+			<div style="opacity: 0.4;font-size: 14px;">{{message.messageContent}}</div>
 		</div>
 		<div class="time">
 			<div style="white-space: nowrap;padding-right: 10px" am-time-ago="message.messageDate | amParse:'DD/MM/YYYY hh:mm'"></div>
@@ -16,4 +16,9 @@
 			</a>
 		</div>
 	</div>
+</div>
+<div class="pagination" ng-if="vm.pages">
+	<a class="previous" ng-click="vm.previous()">Previous</a>
+	<div class="pages">{{vm.currentPage}} of {{vm.pages}} pages</div>
+	<a class="next" ng-click="vm.next()">Next</a>
 </div>
