Dashboard pendign button css fix

--- a/src/app/components/main/dashboard/dashboard.scss
+++ b/src/app/components/main/dashboard/dashboard.scss
@@ -10,7 +10,7 @@
         margin-bottom: 8px;
     }
     .pending-btn {
-        padding: 5px 18px;
+        padding: 5px 18px !important;
         text-transform: uppercase;
         border: 1px solid #57c3ea;
         color: #57c3ea;
